--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.19",
 		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.8",
@@ -37,6 +38,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^10.13.2"
+		"@sveltestrap/sveltestrap": "^6.2.7",
+		"bootstrap": "^5.3.3",
+		"firebase": "^10.13.2",
+		"sass": "^1.79.4"
 	}
 }
