--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,40 @@
-node_modules
-
 # Personal
 ToDo.md
+node_modules
 
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Firebase
+firebase.js
 # Output
 .output
 .vercel
@@ -20,6 +52,8 @@ Thumbs.db
 !.env.test
 
 ### Firebase ###
+/src/lib/firebase.js
+firebase.js
 .idea
 **/node_modules/*
 **/.firebaserc
@@ -31,3 +65,4 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+src/lib/firebase.js
