--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.5",
 		"@sveltejs/adapter-static": "^3.0.5",
+		"@sveltejs/adapter-vercel": "^5.4.4",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
@@ -33,10 +34,12 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"smui-theme": "^7.0.0",
+		"svelte": "^4.2.19",
 		"svelte-check": "^4.0.0",
 		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
+		"vite": "^5.4.8",
 		"vitest": "^2.0.0"
 	},
 	"type": "module",
@@ -46,13 +49,9 @@
 		"@smui/icon-button": "^7.0.0",
 		"@smui/select": "^7.0.0",
 		"@sveltestrap/sveltestrap": "^6.2.7",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"bootstrap": "^5.3.3",
 		"firebase": "^10.13.2",
 		"mongodb": "^6.9.0",
-		"sass": "^1.63.6",
-		"svelte": "^4.2.19",
-		"vite": "^5.4.8"
+		"sass": "^1.63.6"
 	}
 }
