--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "cSpell.words": [
-        "coeff",
-        "deadlift",
-        "leaderboard",
-        "sveltestrap"
-    ]
+	"cSpell.words": ["coeff", "deadlift", "leaderboard", "Powerlifting", "SMUI", "sveltestrap"]
 }
