Added FAQ with basic questions Updated Navigation for FAQ {WIP} New feature searching: added ids to leaderboard cells

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-	"cSpell.words": ["coeff", "deadlift", "leaderboard", "Powerlifting", "SMUI", "sveltestrap"]
+	"cSpell.words": [
+		"coeff",
+		"deadlift",
+		"leaderboard",
+		"powerlifters",
+		"Powerlifting",
+		"SMUI",
+		"sveltestrap"
+	]
 }
