--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/uuid": "^10.0.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -51,6 +52,7 @@
 		"@sveltestrap/sveltestrap": "^6.2.7",
 		"bootstrap": "^5.3.3",
 		"firebase": "^10.13.2",
+		"firebase-admin": "^12.6.0",
 		"sass": "^1.63.6",
 		"uuid": "^10.0.0"
 	}
