--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
 		"@smui/icon-button": "^7.0.0",
 		"@smui/select": "^7.0.0",
 		"@sveltestrap/sveltestrap": "^6.2.7",
-		"bootstrap": "^5.3.3",
+		"bootstrap": "^5.3.5",
+		"chart.js": "^4.4.5",
 		"firebase": "^10.13.2",
 		"firebase-admin": "^12.6.0",
 		"sass": "^1.63.6",
+		"svelte-chartjs": "^3.1.5",
 		"uuid": "^10.0.0"
 	}
 }
