Add .env.example file, update .gitignore, and include dotenv dependency
- Created a new .env.example file for environment variable setup.
- Updated .gitignore to exclude service account key files.
- Added dotenv dependency to package.json for environment variable management.
- Enhanced firebase.js to validate required environment variables.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@sveltestrap/sveltestrap": "^6.2.7",
 		"bootstrap": "^5.3.5",
 		"chart.js": "^4.4.5",
+		"dotenv": "^16.5.0",
 		"firebase": "^10.13.2",
 		"firebase-admin": "^12.6.0",
 		"sass": "^1.63.6",
