--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ Thumbs.db
 .idea
 **/node_modules/*
 **/.firebaserc
+serviceAccountKey.json
+scripts/serviceAccountKey.json
 
 ### Firebase Patch ###
 .runtimeconfig.json
