--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"test:unit": "vitest",
 		"prepare": "npm run smui-theme-light && npm run smui-theme-dark",
 		"smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
-		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
+		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark",
+		"migrate": "node scripts/migrate.cjs --migrate",
+		"migrate:verify": "node scripts/migrate.cjs --verify"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -55,7 +57,7 @@
 		"chart.js": "^4.4.5",
 		"dotenv": "^16.5.0",
 		"firebase": "^10.13.2",
-		"firebase-admin": "^12.6.0",
+		"firebase-admin": "^12.7.0",
 		"sass": "^1.63.6",
 		"svelte-chartjs": "^3.1.5",
 		"uuid": "^10.0.0"
